--- a/README
+++ b/README
@@ -31,7 +31,7 @@ shutdown -r now
 命令行输入 sudo apt-get update ，然后输入
 sudo apt-get install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto
 
-3. https://github.com/coolsnowwolf/lede.git 命令下载好源代码
+3. git https://github.com/coolsnowwolf/lede.git  命令下载好源代码
 
 然后 cd /lede 进入目录
 
