--- a/README
+++ b/README
@@ -33,6 +33,8 @@ sudo apt-get install build-essential asciidoc binutils bzip2 gawk gettext git li
 
 3. git clone https://github.com/coolsnowwolf/lede.git  命令下载好源代码
 
+chmod -R 777 lede
+
 然后 cd /lede 进入目录
 
 4. ./scripts/feeds update -a 
